# ai-job-application-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: routes.py
app/core/: config.py  database.py
app/domain/: __init__.py  schemas.py
app/services/: agent.py  repository.py  skills.py  workflow.py
tests/: test_agent.py  test_api.py
