[project]
name = "ai-job-application-agent"
version = "0.1.0"
description = "AI job application backend with agentic analysis and workflow automation hooks."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "pydantic==1.10.15",
    "uvicorn[standard]==0.34.0",
]

[dependency-groups]
dev = [
    "httpx==0.27.2",
    "pytest==8.3.4",
    "ruff==0.8.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
